; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/rtree/extr_rtree.c_cellGrowth.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/rtree/extr_rtree.c_cellGrowth.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32*, i32*)* @cellGrowth to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @cellGrowth(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @memcpy(i32* %8, i32* %9, i32 4)
  %11 = load i32*, i32** %4, align 8
  %12 = call i64 @cellArea(i32* %11, i32* %8)
  store i64 %12, i64* %7, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = call i32 @cellUnion(i32* %13, i32* %8, i32* %14)
  %16 = load i32*, i32** %4, align 8
  %17 = call i64 @cellArea(i32* %16, i32* %8)
  %18 = load i64, i64* %7, align 8
  %19 = sub nsw i64 %17, %18
  ret i64 %19
}

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i64 @cellArea(i32*, i32*) #1

declare dso_local i32 @cellUnion(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
